@@ -30,7 +30,7 @@
 
         <dep.airlift.version>207-SNAPSHOT</dep.airlift.version>
         <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
-        <dep.jetty.version>9.4.40.v20210413</dep.jetty.version>
+        <dep.jetty.version>9.4.42.v20210604</dep.jetty.version>
         <dep.jersey.version>2.26</dep.jersey.version>
         <dep.jjwt.version>0.11.2</dep.jjwt.version>
     </properties>
