@@ -1,6 +1,7 @@
 207
 
 - Fix spurious reload of HTTP server SSL context after start.
+- Fix support for SNI for single label domains and IP addresses.
 - Deprecate ConfigurationModule.installModules.
 - Deprecate ConditionalModule.installModuleIf and introduce
   ConditionalModule.conditionalModule.
